--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <em>  
                 Sarah, hoje comemoramos quatro anos da minha melhor escolha, do meu mais intenso frio na barriga, e da minha mais doce ansiedade.  
                 Há exatos quatro anos, tomei a decisão de te entregar algo especial, algo que só você poderia despertar em mim.  
-                Não algo efêmero, afinal até mesmo os vermos podem tocar a minha carne, mas sim   algo eterno, que o mundo não pode destruir: o meu amor.  
+                Não algo efêmero, afinal até mesmo os vermes podem tocar a minha carne, mas sim algo eterno, que o mundo não pode destruir: o meu amor.  
                 Porque você o conquistou antes mesmo de nossos corpos se tocarem, antes mesmo de eu perceber o quanto precisava de você.  
                 Você é o motivo que me faz querer ser melhor a cada dia. Quero que saiba que o que construímos é precioso para mim, e farei tudo para que isso perdure.  
                 Estou aqui para fortalecer o que temos, para fazer a diferença sempre que nosso relacionamento precisar.  
