--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Surpresa para você ❤️</h1>
+        <h1>Contagem regressiva para 2 patinhos na lagoa! ❤️</h1>
         <img src="Foto01.jpg" alt="Foto do casal" class="photo">
         <p class="text">
-            Juntos há <strong>4 anos, 0 meses e 5 dias</strong>.<br>
+            Juntos há <strong>4 anos, 0 meses e 6 dias</strong>.<br>
             <em>“Você é minha melhor decisão, e todos os dias ao seu lado são um presente. Te amo para sempre!”</em><br><br>
             <em>  
-                Essas férias ao seu lado foram simplesmente inesquecíveis. 
-                Cada instante, desde os toques carinhosos até as risadas e até mesmo as indecisões sobre o que fazer, tornou tudo ainda mais especial. 
-                Não poderia ter desejado dias melhores do que esses com você. Te amo demais! ❤️
+                Felicidade é saber que estamos prestes a comemorar mais um ano da sua existência juntos. 
+                Isso transborda meu coração de alegria! Amanhã, cada momento será tão especial quanto você é para todos nós.
+                Que este novo ciclo venha repleto de amor, conquistas, aprendizados e muita felicidade. 
+                E o melhor de tudo? Poder estar ao seu lado para viver cada instante disso com você. 
+                Te amo imensamente e mal posso esperar para fazer do seu dia algo inesquecível. ❤️
                 </em>
         </p>
     </div>
