--- a/index.html
+++ b/index.html
@@ -38,24 +38,13 @@
 <body>
     <div class="container">
         <h1>Surpresa para você ❤️</h1>
-        <img src="Foto01.jpg" alt="Foto do casal" class="photo">
+        <img src="Foto03.png" alt="Foto do casal" class="photo">
         <p class="text">
-            Juntos há <strong>4 anos, 0 meses e 0 dias</strong>.<br>
+            Juntos há <strong>4 anos, 0 meses e 7 dias</strong>.<br>
             <em>“Você é minha melhor decisão, e todos os dias ao seu lado são um presente. Te amo para sempre!”</em><br><br>
             <em>  
-                Sarah, hoje comemoramos quatro anos da minha melhor escolha, do meu mais intenso frio na barriga, e da minha mais doce ansiedade.  
-                Há exatos quatro anos, tomei a decisão de te entregar algo especial, algo que só você poderia despertar em mim.  
-                Não algo efêmero, afinal até mesmo os vermes podem tocar a minha carne, mas sim algo eterno, que o mundo não pode destruir: o meu amor.  
-                Porque você o conquistou antes mesmo de nossos corpos se tocarem, antes mesmo de eu perceber o quanto precisava de você.  
-                Você é o motivo que me faz querer ser melhor a cada dia. Quero que saiba que o que construímos é precioso para mim, e farei tudo para que isso perdure.  
-                Estou aqui para fortalecer o que temos, para fazer a diferença sempre que nosso relacionamento precisar.  
-                Afinal, um reboque jamais carregará uma Ferrari duas vezes na vida (kkkk).  
-                Há uma história egípcia onde Ísis, após a morte de seu marido (Osíris), viaja por todo o Egito em busca dos pedaços de seu corpo para trazê-lo de volta à vida.
-                O amor de Ísis fez com que ela enfrentasse a escuridão e restaurasse o que foi perdido. Assim como o Nilo renova a terra, o amor renova o espírito.
-                E, assim como a lua reflete o espírito e a beleza de Deus, o espelho reflete a sua mais bela criação: você.  
-                Você, Sarah, ilumina o meu mundo, me dá forças para me levantar, me faz rir, e, mais importante, me aceita como sou.  
-                Apenas alguém tão especial quanto você seria capaz de transformar a minha vida de tantas formas e de me ensinar o verdadeiro significado do amor.  
-                Obrigado por ser minha maior inspiração e por me amar com a mesma intensidade que te amo.  
+                Feliz natal, meu amor!
+                Aproveite bastante!  
                 </em>
                 
         </p>
