--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
         <img src="Foto04.png" alt="Foto do casal" class="photo">
         <p class="text">
             Juntos há <strong>4 anos, 0 meses e 7 dias</strong>.<br>
-            <em>“Você é minha melhor decisão, e todos os dias ao seu lado são um presente. Te amo para sempre!”</em><br><br>
+            <em>“Te amo para sempre!”</em><br><br>
             <em>  
-                Feliz Natal meu amor!
-                Aproveite bastante!  
+                Feliz Natal meu amor! Aproveite bastante!  
                 </em>
         </p>
     </div>
