--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Surpresa para você ❤️</h1>
+        <h1>Feliz Natal, princesa! ❤️</h1>
         <img src="Foto04.png" alt="Foto do casal" class="photo">
         <p class="text">
             Juntos há <strong>4 anos, 0 meses e 7 dias</strong>.<br>
             <em>“Te amo para sempre!”</em><br><br>
             <em>  
-                Feliz Natal meu amor! Aproveite bastante!  
+                Feliz Natal meu amor! Aproveite bastante este presente!  
                 </em>
         </p>
     </div>
