--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
         <h1>Contagem regressiva para 2 patinhos na lagoa! ❤️</h1>
-        <img src="Foto_05.png.jpg" alt="Foto do casal" class="photo">
+        <img src="Foto_05.jpg" alt="Foto do casal" class="photo">
         <p class="text">
             Juntos há <strong>4 anos, 0 meses e 6 dias</strong>.<br>
             <em>“Você é minha melhor decisão, e todos os dias ao seu lado são um presente. Te amo para sempre!”</em><br><br>
