--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 <body>
     <div class="container">
         <h1>Contagem regressiva para 2 patinhos na lagoa! ❤️</h1>
-        <img src="Foto_05.jpg" alt="Foto do casal" class="photo">
+        <img src="Foto_06.jpg" alt="Foto do casal" class="photo">
         <p class="text">
-            Juntos há <strong>4 anos, 0 meses e 6 dias</strong>.<br>
-            <em>“Você é minha melhor decisão, e todos os dias ao seu lado são um presente. Te amo para sempre!”</em><br><br>
+            Juntos há <strong>4 anos, 0 meses e 28 dias</strong>.<br>
+            <em>“Meu coração aprendeu que o presente é o único tempo onde o amor pode realmente florescer”</em><br><br>
             <em>  
-                Felicidade é saber que comemoramos mais uma virada de ano juntos. 
-                Um ano de muita luta, paciência, dedicação e carinho. Espero estar à altura do seu amor, e retribuí-lo com todo o meu!
-                Neste ano que se inicia, conte comigo para tudo, principalmente na nova jornada que se inicia!
+                Hoje começa uma nova etapa na sua jornada, e eu estou orgulhoso de você! 
+                Sei o quanto você se dedicou para chegar até aqui, e tenho certeza de que vai arrasar no seu primeiro dia no estágio. 💉🩺 
+                Estarei torcendo por você em cada passo. Vai com tudo e mostra o quão incrível você é!
                 </em>
         </p>
     </div>
     <div class="footer">
-        Criado com amor, pelo seu amor! 💕
+        Criado com amor! ❤️‍🩹
     </div>
 </body>
 </html>
