--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Contagem regressiva para 2 patinhos na lagoa! ❤️</h1>
+        <h1>Contagem regressiva para o primeiro dia no primeiro emprego! ❤️</h1>
         <img src="Foto_06.jpg" alt="Foto do casal" class="photo">
         <p class="text">
             Juntos há <strong>4 anos, 0 meses e 28 dias</strong>.<br>
