--- a/index.html
+++ b/index.html
@@ -38,14 +38,12 @@
 <body>
     <div class="container">
         <h1>Contagem regressiva para o primeiro dia no primeiro emprego! ❤️</h1>
-        <img src="Foto_06.jpg" alt="Foto do casal" class="photo">
+        <img src="Foto_07.jpg" alt="Foto do casal" class="photo">
         <p class="text">
-            Juntos há <strong>4 anos, 0 meses e 28 dias</strong>.<br>
-            <em>“Meu coração aprendeu que o presente é o único tempo onde o amor pode realmente florescer”</em><br><br>
+            Juntos há: <strong>4 anos, 1 mês e 10 dias</strong>.<br>
+            <em>“Que o tempo se curve à força do nosso amor, porque mesmo quando os dias são curtos, nossa conexão é eterna e invencível.”</em><br><br>
             <em>  
-                Hoje começa uma nova etapa na sua jornada, e eu estou orgulhoso de você! 
-                Sei o quanto você se dedicou para chegar até aqui, e tenho certeza de que vai arrasar no seu primeiro dia no estágio. 💉🩺 
-                Estarei torcendo por você em cada passo. Vai com tudo e mostra o quão incrível você é!
+                Minha linda, o tempo pode até ser implacável, roubando momentos que antes eram só nossos, mas isso não diminui a grandeza do que sentimos um pelo outro. Cada segundo ao seu lado, mesmo que breve, carrega um significado imenso, pois nosso amor não se mede pela quantidade de horas, mas pela intensidade de cada instante. Que esta nova fase de sua vida traga conquistas e crescimento, e saiba que, mesmo à distância, meu coração está sempre ao seu lado, torcendo por você. O tempo pode mudar nossa rotina, mas nunca mudará a essência do que somos juntos: fortes, apaixonados e invencíveis.
                 </em>
         </p>
     </div>
